--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -26,11 +26,58 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 
-.App {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background-image: url(../assets/background.png);
-	min-height: 100vh;
+.home {
+    text-align: center;
+    width: 80%
 }
 
+.itemContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 2vh;
+    text-align: left;
+}
+
+.profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+}
+
+.data {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+.displayLines {
+    display: flex;
+}
+
+.displayLines1 {
+    min-width: 60%;
+}
+
+.displayLines2 {
+    min-width: 30%;
+}
+
+.displayLines3 {
+    border: 1px solid black;
+    border-radius: 100px;
+    padding: 2px;
+    min-width: 19px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.displayLines3:hover {
+    background-color: rgb(182, 183, 190);
+}
+
+.displayLines4 {
+    padding: 2px;
+    min-width: 19px;
+}
