all basic functionality working. time to deploy

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -26,58 +26,97 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 
+.refresh-button {
+    margin: 0.6rem;
+}
+
 .home {
-    text-align: center;
-    width: 80%
-}
-
-.itemContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-bottom: 2vh;
-    text-align: left;
-}
-
-.profile {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30%;
-}
-
-.data {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    align-items: center;
+    width: 100%;
 }
 
-.displayLines {
+.item {
     display: flex;
+    width: 60%;
+    min-height: 15rem;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+
+    background-color: rgba(151, 184, 197, 0.582);
+    border-radius: 5px;
+    padding: 0.5rem;
 }
 
-.displayLines1 {
-    min-width: 60%;
-}
-
-.displayLines2 {
+.leftbox {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
     min-width: 30%;
 }
 
-.displayLines3 {
-    border: 1px solid black;
-    border-radius: 100px;
-    padding: 2px;
-    min-width: 19px;
-    cursor: pointer;
+.item-name {
+    font-size: 1.5rem;
+}
+
+.rightbox {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    min-width: 60%;
+}
+
+.rightbox-container {
+    background-color: rgba(101, 139, 131, 0.11);
+    margin-top: 0.5rem;
+    margin-bottom: 0.1rem;
+    padding: 0.2rem;
+    border-radius: 2px;
+}
+
+.rightbox-section {
+    display: flex;
+    justify-content: left;
+}
+
+.rightbox-section-1 {
+    font-size: 1.2rem;
+    min-width: 50%;
+}
+
+.rightbox-section-2 {
+    font-size: 1.1rem;
+    min-width: 40%;
+}
+
+.rightbox-section-3 {
     text-align: center;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    border: 1px solid black;
+    border-radius: 50px;
+    padding: 2px
 }
 
-.displayLines3:hover {
-    background-color: rgb(182, 183, 190);
+.rightbox-extended {
+    margin: 0;
 }
 
-.displayLines4 {
-    padding: 2px;
-    min-width: 19px;
+.extended-line {
+    display: flex;
+    min-width: 88%;
+    background-color: rgba(207, 223, 236, 0.726);
+    margin-bottom: 0.2rem;
+    border: 1px solid grey;
+    border-radius: 3px;
+    font-size: 0.95rem;
+    
+}
+
+.extended-line:focus {
+    border: 2px solid rgba(49, 111, 245, 0.692);
+    /* outline: 1px solid rgba(49, 111, 245, 0.692); */
+    outline: 0;
 }
