--- a/src/styles/Items.css
+++ b/src/styles/Items.css
@@ -1,31 +1,3 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 1px solid red;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-    vertical-align: baseline;
-    text-decoration: none;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-
 .refresh-button {
     margin: 0.6rem;
 }
@@ -35,6 +7,7 @@ footer, header, hgroup, menu, nav, section {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    color: rgb(17, 17, 17);
 }
 
 .item {
@@ -47,6 +20,7 @@ footer, header, hgroup, menu, nav, section {
     background-color: rgba(151, 184, 197, 0.582);
     border-radius: 5px;
     padding: 0.5rem;
+    box-shadow: 0 0 4px rgb(131, 131, 131);
 }
 
 .leftbox {
@@ -65,7 +39,7 @@ footer, header, hgroup, menu, nav, section {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
+    border: 2px solid rgb(17, 17, 17);
     border-radius: 100%;
     width: 12rem;
     height: 12rem;
@@ -114,7 +88,7 @@ footer, header, hgroup, menu, nav, section {
     width: 20px;
     height: 20px;
     cursor: pointer;
-    border: 1px solid black;
+    border: 1px solid rgb(17, 17, 17);
     border-radius: 50px;
     padding: 2px
 }
